--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -75,5 +75,15 @@ fos_user:
     firewall_name: main
     user_class: AwardMe\UserBundle\Entity\User
 
+    profile:
+        form:
+            type: awardme_user_profile
+
 fos_js_routing:
      routes_to_expose: [ (.*) ]
+
+stof_doctrine_extensions:
+    default_locale: fr_FR
+    orm:
+        default:
+            timestampable: TRUE
