--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -99,3 +99,7 @@ liip_imagine:
             quality: 50
             filters:
                 thumbnail: { size: [400, 200], mode: outbound }
+        my_avatar:
+            quality: 50
+            filters:
+                thumbnail: { size: [32, 32], mode: outbound }
